tests/NormalTests/paczka1/small_fuzzy/26438426.err
Error in line 7: Ipo0AgEUPk A512 93,9
Error in line 2: mG3eqeMe S719 44,3
Error in line 4: jIpo0AgEUPk S719 60,2
